blog: fix nested replies, add collapse btn, css tweaks

--- a/resources/scss/blog.scss
+++ b/resources/scss/blog.scss
@@ -4,22 +4,75 @@
   z-index: 30;
   background: var(--gradient-bg-main);
 }
-.blog-post {
+section.blog-post {
+  border: 0;
+  border-bottom: var(--line-width) solid;
+}
+.blog > section:last-of-type {
+  border: 0;
 }
 .blog-section {
 }
 .blog-comments {
   background-color: var(--bg-1);
-  /* border: var(--line-width-sm) solid; */
+  border: 0;
+  border-top: var(--line-width-md) solid;
 }
+.blog-comments-inner {
+  transition: max-height 0.25s;
+  max-height: 100vh;
+  overflow-y: scroll;
+}
+.blog-comments-inner.collapsed {
+  max-height: 30em; // bleh tho, want whoosh w/o capping... js calc actual height i guess and inject.
+  transition: max-height 0.10s;
+  // transition: max-height 0.5s;
+}
+.blog-comments-inner > section {
+  // line up top-level comments with line above
+  padding: var(--space) 0.25em;
+
+ }
+
 .blog-comment {
   position: relative;
-  /* background-color: var(--bg-2); */
+  padding-bottom: 0.5rem;
+  border-top: var(--line-width-sm) solid;
+}
+.blog-comment-enter {
+  opacity: 0;
+}
+.blog-comment-enter-active {
+  opacity: 1;
+  transition: opacity 200ms;
+}
+.blog-comment-exit {
+  opacity: 1;
+}
+.blog-comment-exit-active {
+  opacity: 0;
+  transition: opacity 200ms;
+}
+.blog-comment-info {
+  padding-bottom: 1.00em;
+}
+.blog-comment-user {
+  font-style: italic;
+  font-weight: bold;
 }
 .blog-btn {
   background-color: var(--bg-2);
   font-size: 0.8em;
   border-radius: 0;
+}
+.blog-btn-collapse {
+  font-size: 70%;
+  display: inline;
+}
+.blog-nav-btn.current {
+  font-weight: bolder;
+  border: 0;
+  border-bottom: var(--line-width-sm) solid;
 }
 .blog-add-comment-btn {
 }
@@ -36,8 +89,7 @@
   /* transition: 0.15s; */
 }
 .blog-reply-comment-btn:hover {
-  /* font-weight: bold; */
-  font-size: 1.2em;
+  font-size: 1.0em;
 }
 
 .blog-adding-comment {
@@ -63,3 +115,7 @@ textarea.blog-adding-comment-textbox {
   padding: 0.75em;
 }
 
+.blog-comment-title {
+  font-size: 105%;
+  font-weight: bold;
+}
